--- a/YouTube-MP3-MP4-Convertor.csproj
+++ b/YouTube-MP3-MP4-Convertor.csproj
@@ -7,7 +7,7 @@
     <ProjectGuid>{A42928F3-90D9-47F6-8E92-00DF5BEF2898}</ProjectGuid>
     <OutputType>WinExe</OutputType>
     <RootNamespace>Youtube_Videos_Herrunterladen</RootNamespace>
-    <AssemblyName>Youtube Videos Herrunterladen</AssemblyName>
+    <AssemblyName>YouTube-MP3-MP4-Convertor</AssemblyName>
     <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
