--- a/packages.config
+++ b/packages.config
@@ -12,5 +12,6 @@
   <package id="System.Text.Json" version="7.0.3" targetFramework="net48" />
   <package id="System.Threading.Tasks.Extensions" version="4.5.4" targetFramework="net48" />
   <package id="System.ValueTuple" version="4.5.0" targetFramework="net48" />
+  <package id="taglib" version="2.1.0.0" targetFramework="net48" />
   <package id="YoutubeExplode" version="6.2.16" targetFramework="net48" />
 </packages>
