chose video quality
you can now chose what video wulity you want to download. and as in evryupdate i maked the performace better

--- a/YouTube-MP3-MP4-Convertor.csproj
+++ b/YouTube-MP3-MP4-Convertor.csproj
@@ -117,6 +117,7 @@
     <Compile Include="UsbManager.cs" />
     <Compile Include="VideoDownloader.cs" />
     <Compile Include="StatsUpdater.cs" />
+    <Compile Include="VideoQualityUpdater.cs" />
     <EmbeddedResource Include="InfoForm.resx">
       <DependentUpon>InfoForm.cs</DependentUpon>
     </EmbeddedResource>
