--- a/YouTube-MP3-MP4-Convertor.csproj
+++ b/YouTube-MP3-MP4-Convertor.csproj
@@ -117,7 +117,7 @@
     <Compile Include="UsbManager.cs" />
     <Compile Include="VideoDownloader.cs" />
     <Compile Include="StatsUpdater.cs" />
-    <Compile Include="VideoQualityUpdater.cs" />
+    <Compile Include="VideoAndAudioSizeUpdater.cs" />
     <EmbeddedResource Include="InfoForm.resx">
       <DependentUpon>InfoForm.cs</DependentUpon>
     </EmbeddedResource>
