chose video quality
you can now chose the videoquality
masive performance changes and sorted the code

--- a/YouTube-MP3-MP4-Convertor.csproj
+++ b/YouTube-MP3-MP4-Convertor.csproj
@@ -115,6 +115,7 @@
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
     <Compile Include="UsbManager.cs" />
+    <Compile Include="Utilityclass.cs" />
     <Compile Include="VideoDownloader.cs" />
     <Compile Include="StatsUpdater.cs" />
     <Compile Include="VideoAndAudioSizeUpdater.cs" />
